# simpsons

./: README.md  example.py  pyproject.toml  simpsons.py  simpsons.ttl  simpsons_rdf.py
simpsons_rdf/: __init__.py  simpsons.ttl
tests/: test_simpsons.py
